--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,10 +35,7 @@ apply plugin: 'kotlin-kapt'
 
 dependencies {
 
-    //user permissions
-    implementation 'com.karumi:dexter:6.2.2'
-    //coil
-    implementation "io.coil-kt:coil:1.1.1"
+    implementation 'com.github.Drjacky:ImagePicker:2.3.20'
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
